# captchasolv-python

./: LICENSE  README.md  pyproject.toml
captchasolv/: __init__.py  async_client.py  client.py  exceptions.py  models.py  types.py
examples/: all_captcha_types.py  async_usage.py  basic_usage.py  check_balance.py  concurrent_solving.py  custom_user_agent.py  error_handling.py  polling_mode.py
